# cutting-plane-sparsification

./: .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md  analyze.py  create_dataset.py  runner.py  solve.sh  util.py
configs/: hybrid-20-40.set  maxsparse.set  minsparse.set  nosparse.set  reject-10.set  reject-20.set  reject-40.set  reject-5.set  reproduce-noreject.set  reproduce-reject-5.set  sparse-10.set  sparse-20.set  sparse-40.set  sparse-5.set  sparse-80.set  sparse.set
data/: benchmark_solvable.test  collection.csv  collection.test  collection_nnz.csv  easy-v10.test  hard-v20.test  maxdensity.csv  problem_info.txt  solvable_nnz.csv
ipet/: sparsification.xml
src/: sparsifier.cc  sparsifier.h  statistics.h  status_macros.h  testmain.cpp
